--- a/Compiler.UI/MainWindow.xaml
+++ b/Compiler.UI/MainWindow.xaml
@@ -110,7 +110,7 @@
                 <Button Name="CompileRunBtn"
                         Style="{StaticResource MaterialDesignRaisedButton}"
                         Margin="0 0 8 0"
-                        Click="Compile">
+                        Click="CompileAndRun">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="Play" Height="24" Width="24" />
                     </StackPanel>
